--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "repository": {
     "type": "git",
+    "url": "https://github.com/dammitdrum/crm-rr.git"
   },
   "author": "Sergei Martynchik <dammitdrum@gmail.com>",
   "license": "MIT",
