--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crm-rr",
-  "version": "3.0.0-alpha.2",
-  "description": "Get started with React, Redux, and React-Router!",
+  "version": "0.0.1",
+  "description": "React Redux Application",
   "main": "index.js",
   "engines": {
     "node": ">=4.5.0",
