--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crm-rr",
+  "name": "crm",
   "version": "0.0.1",
   "description": "React Redux Application",
   "main": "index.js",
@@ -71,7 +71,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dammitdrum/crm-rr.git"
+    "url": "https://github.com/dammitdrum/crm.git"
   },
   "author": "Sergei Martynchik <dammitdrum@gmail.com>",
   "license": "MIT",
